# tek_mdo

./: pyproject.toml
tek_mdo/: main.py
tests/: test_tek_mdo.py
